# fresh-baked-skeleton

./: .travis.yml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst
fresh_baked_skeleton/: cli.py  fresh_baked_skeleton.py  main.py
tests/: test_cli.py  test_fresh_baked_skeleton.py  test_main.py
