[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fresh_baked_skeleton"
version = "0.1.146"
description = "Short Description of My Library"
authors = [
    "Colin Fahy <colin@cfahy.com>",
]
license = "LGPL-3.0"
readme = "README.md"
homepage = "https://github.com/Curly-Mo/fresh-baked-skeleton"
repository = "https://github.com/Curly-Mo/fresh-baked-skeleton"
documentation = "https://fresh_baked_skeleton.readthedocs.org/en/latest/"
keywords = []
classifiers = [
    # "License :: OSI Approved :: LGPL-3.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
fresh_baked_skeleton = 'fresh_baked_skeleton.cli:cli'

# Requirements
[tool.poetry.dependencies]
python = "^3.7"
typing = "^3.7"
click = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
tox = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-apidoc = "*"
# black only works on python 3.6+
black = { version = "*", python = "^3.6" }
flake8 = "*"
isort = "*"
bandit = "*"
mypy = { version = "*", optional = true }

[tool.poetry.extras]
mypy = ["mypy"]

[tool.black]
line-length = 120
